--- a/css/app.css
+++ b/css/app.css
@@ -168,6 +168,7 @@ body {
   color: black !important;
   display: inline-block;
   padding: 10px 15px !important;
+  text-align: center;
 }
 .cus__btn {
   font-size: 10px;
@@ -1442,6 +1443,12 @@ main #mainContainer .card__element:nth-child(4) {
     grid-template-rows: auto repeat(2, 1fr);
   }
 }
+@media only screen and (min-width: 992px) {
+  .visual_card_list {
+    grid-template-columns: repeat(4, 1fr) repeat(4, 1.25fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+}
 .visual_card_list .visual_card {
   margin-bottom: 20px;
   padding: 25px 18px;
@@ -1466,7 +1473,10 @@ main #mainContainer .card__element:nth-child(4) {
 }
 @media only screen and (min-width: 992px) {
   .visual_card_list .visual_card {
-    padding: 75px 10px 75px 55px;
+    padding: 25px 5px 25px 50px;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
   }
 }
 .visual_card_list .visual_card .icon_wrap {
@@ -1548,9 +1558,21 @@ main #mainContainer .card__element:nth-child(4) {
     grid-row: 2/3;
   }
 }
+@media only screen and (min-width: 992px) {
+  .visual_card_list .trash {
+    grid-column: 5/7;
+    grid-row: 1/2;
+  }
+}
 @media only screen and (min-width: 576px) {
   .visual_card_list .call {
     grid-column: 2/3;
+    grid-row: -1/-2;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .visual_card_list .call {
+    grid-column: 6/8;
     grid-row: -1/-2;
   }
 }
@@ -1559,6 +1581,12 @@ main #mainContainer .card__element:nth-child(4) {
     grid-column: 2/3;
     grid-row: 2/3;
     border: none !important;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .visual_card_list .expand {
+    grid-column: 7/9;
+    grid-row: 1/2;
   }
 }
 @media only screen and (min-width: 576px) {
@@ -1596,6 +1624,12 @@ main #mainContainer .card__element:nth-child(4) {
     padding-bottom: 35px;
   }
 }
+@media only screen and (min-width: 992px) {
+  .visual_card_list .shaveOffSection {
+    grid-row: -2/-1;
+    grid-column: 1/6;
+  }
+}
 .visual_card_list .shaveOffSection .tittle {
   font-size: 16.5px;
   line-height: 110%;
@@ -1615,8 +1649,33 @@ main #mainContainer .card__element:nth-child(4) {
     font-size: 30px;
   }
 }
+@media only screen and (min-width: 1200px) {
+  .visual_card_list .shaveOffSection .tittle {
+    font-size: 35px;
+  }
+}
+@media only screen and (min-width: 1400px) {
+  .visual_card_list .shaveOffSection .tittle {
+    font-size: 42px;
+  }
+}
+@media only screen and (min-width: 1800px) {
+  .visual_card_list .shaveOffSection .tittle {
+    font-size: 53px;
+  }
+}
 .visual_card_list .shaveOffSection .tittle span {
   display: block;
+}
+@media only screen and (min-width: 992px) {
+  .visual_card_list .shaveOffSection .tittle span {
+    display: block;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .visual_card_list .shaveOffSection .cus__btn {
+    width: 210px;
+  }
 }
 
 /*# sourceMappingURL=app.css.map */
