--- a/scss/app.scss
+++ b/scss/app.scss
@@ -180,6 +180,7 @@ body {
     color: black !important;
     display: inline-block;
     padding: 10px 15px !important;
+    text-align: center;
     @include font-size($msm, $lg, 10px, 16px);
     @include resp($lg) {
         font-size: 16px;
@@ -1076,6 +1077,11 @@ main {
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: auto repeat(2, 1fr);
     }
+    @include resp($lg) {
+        grid-template-columns: repeat(4, 1fr) repeat(4, 1.25fr);
+        grid-template-rows: repeat(2, 1fr);
+    }
+    
     
     // visual card 
     .visual_card {
@@ -1094,7 +1100,10 @@ main {
             padding: 65px 10px 65px 45px;
         }
         @include resp ($lg) {
-            padding: 75px 10px 75px 55px;
+            padding: 25px 5px 25px 50px;
+            display: flex;
+            flex-flow: column wrap;
+            justify-content: center;
         }
         // card icon 
         .icon_wrap {
@@ -1152,12 +1161,20 @@ main {
             grid-column: 1/2;
             grid-row: 2/3;
         }
+        @include resp($lg) {
+            grid-column: 5/7;
+            grid-row: 1/2;
+        }
     }
 
     // call card 
     .call {
         @include resp($sm) {
             grid-column: 2/3;    
+            grid-row: -1/-2;
+        }
+        @include resp($lg) {
+            grid-column: 6/8;
             grid-row: -1/-2;
         }
     }
@@ -1167,6 +1184,10 @@ main {
             grid-column: 2/3;
             grid-row: 2/3;
             border: none!important;
+        }
+        @include resp($lg) {
+            grid-column: 7/9;
+            grid-row: 1/2;
         }
     }
 
@@ -1208,15 +1229,38 @@ main {
             padding-top: 35px;
             padding-bottom: 35px;
         }
+        @include resp ($lg) {
+            grid-row: -2/-1;
+            grid-column: 1/6;
+        }
         .tittle {
             font-size: 16.5px;
             line-height: 110%;
             @include resp ($sm) {
                 @include font-size($sm, $lg, 16px, 30px);
             }
+            @include resp ($xl) {
+                font-size: 35px;
+            }
+            @include resp($xxl) {
+                font-size: 42px;
+            }
+            @include resp($mxl) {
+                font-size: 53px;
+            }
             span {
                 display: block;
+                @include resp($lg) {
+                    display: block;
+                }
             }
+        }
+        // custom button 
+        .cus__btn {
+            @include resp ($lg) {
+                width: 210px;
+            }
+            // @include resp()
         }
     }
 }
